--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,6 +1,12 @@
-# dependencies
-/node_modules
+.idea/
+.vscode/
+node_modules/
+build/
+tmp/
+temp/
 
-#env
-.env.prod
+dist
+
+#.env
 .env.dev
+.env.prod
