--- a/backend/package.json
+++ b/backend/package.json
@@ -1,22 +1,31 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "tsc-watch --onSuccess \"ts-node src/index.ts\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "leesh235",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.17.3"
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.13",
-    "@types/node": "^17.0.21",
-    "ts-node": "^10.7.0",
-    "tsc-watch": "^4.6.0",
-    "typescript": "^4.6.2"
-  }
+    "name": "backend",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "start": "ts-node src/index.ts",
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "typeorm": "typeorm-ts-node-commonjs"
+    },
+    "author": "leesh235",
+    "license": "ISC",
+    "dependencies": {
+        "@types/cors": "^2.8.12",
+        "@types/dotenv": "^8.2.0",
+        "cors": "^2.8.5",
+        "cross-env": "^7.0.3",
+        "dotenv": "^16.0.0",
+        "express": "^4.17.3",
+        "mysql": "^2.14.1",
+        "path": "^0.12.7",
+        "reflect-metadata": "^0.1.13"
+    },
+    "devDependencies": {
+        "@types/express": "^4.17.13",
+        "@types/node": "^16.11.10",
+        "ts-node": "10.4.0",
+        "tsc-watch": "^4.6.0",
+        "typescript": "4.5.2"
+    }
 }
