--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "ts-node src/index.ts",
+        "start": "cross-env NODE_ENV=dev tsc-watch --onSuccess \"ts-node src/app.ts\"",
         "test": "echo \"Error: no test specified\" && exit 1",
         "typeorm": "typeorm-ts-node-commonjs"
     },
@@ -17,9 +17,11 @@
         "cross-env": "^7.0.3",
         "dotenv": "^16.0.0",
         "express": "^4.17.3",
-        "mysql": "^2.14.1",
+        "mysql2": "^2.3.3",
         "path": "^0.12.7",
-        "reflect-metadata": "^0.1.13"
+        "reflect-metadata": "^0.1.13",
+        "typeorm": "0.3.4",
+        "mysql": "^2.14.1"
     },
     "devDependencies": {
         "@types/express": "^4.17.13",
