--- a/backend/package.json
+++ b/backend/package.json
@@ -13,15 +13,17 @@
     "dependencies": {
         "@types/cors": "^2.8.12",
         "@types/dotenv": "^8.2.0",
+        "@types/morgan": "^1.9.3",
         "cors": "^2.8.5",
         "cross-env": "^7.0.3",
         "dotenv": "^16.0.0",
         "express": "^4.17.3",
+        "morgan": "^1.10.0",
+        "mysql": "^2.14.1",
         "mysql2": "^2.3.3",
         "path": "^0.12.7",
         "reflect-metadata": "^0.1.13",
-        "typeorm": "0.3.4",
-        "mysql": "^2.14.1"
+        "typeorm": "0.3.4"
     },
     "devDependencies": {
         "@types/express": "^4.17.13",
