--- a/backend/package.json
+++ b/backend/package.json
@@ -11,13 +11,19 @@
     "author": "leesh235",
     "license": "ISC",
     "dependencies": {
+        "@types/bcrypt": "^5.0.0",
         "@types/cors": "^2.8.12",
         "@types/dotenv": "^8.2.0",
         "@types/morgan": "^1.9.3",
+        "@types/passport": "^1.0.7",
+        "@types/passport-jwt": "^3.0.6",
+        "@types/passport-local": "^1.0.34",
+        "bcrypt": "^5.0.1",
         "cors": "^2.8.5",
         "cross-env": "^7.0.3",
         "dotenv": "^16.0.0",
         "express": "^4.17.3",
+        "jsonwebtoken": "^8.5.1",
         "morgan": "^1.10.0",
         "mysql": "^2.14.1",
         "mysql2": "^2.3.3",
