--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,9 @@
         "morgan": "^1.10.0",
         "mysql": "^2.14.1",
         "mysql2": "^2.3.3",
+        "passport": "^0.5.2",
+        "passport-jwt": "^4.0.0",
+        "passport-local": "^1.0.0",
         "path": "^0.12.7",
         "reflect-metadata": "^0.1.13",
         "typeorm": "0.3.4"
