--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,9 @@
         "@types/bcrypt": "^5.0.0",
         "@types/cors": "^2.8.12",
         "@types/dotenv": "^8.2.0",
+        "@types/fs-extra": "^9.0.13",
         "@types/morgan": "^1.9.3",
+        "@types/multer": "^1.4.7",
         "@types/passport": "^1.0.7",
         "@types/passport-jwt": "^3.0.6",
         "@types/passport-local": "^1.0.34",
@@ -23,8 +25,10 @@
         "cross-env": "^7.0.3",
         "dotenv": "^16.0.0",
         "express": "^4.17.3",
+        "fs-extra": "^10.0.1",
         "jsonwebtoken": "^8.5.1",
         "morgan": "^1.10.0",
+        "multer": "^1.4.4",
         "mysql": "^2.14.1",
         "mysql2": "^2.3.3",
         "passport": "^0.5.2",
