--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
         "@types/jest": "^27.4.1",
         "@types/node": "^16.11.26",
         "@types/react": "^17.0.39",
+        "@types/react-avatar-editor": "^12.0.0",
         "@types/react-dom": "^17.0.13",
         "@types/react-redux": "^7.1.23",
         "@types/react-router-dom": "^5.3.3",
@@ -17,6 +18,7 @@
         "dotenv-cli": "^5.1.0",
         "path": "^0.12.7",
         "react": "^17.0.2",
+        "react-avatar-editor": "^12.0.0",
         "react-dom": "^17.0.2",
         "react-redux": "^7.2.8",
         "react-router-dom": "^6.2.2",
