--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
         "@types/react-redux": "^7.1.23",
         "@types/react-router-dom": "^5.3.3",
         "@types/styled-components": "^5.1.24",
+        "@types/uuid": "^8.3.4",
         "axios": "^0.26.1",
         "dotenv-cli": "^5.1.0",
         "path": "^0.12.7",
@@ -28,6 +29,7 @@
         "styled-components": "^5.3.3",
         "styled-reset": "^4.3.4",
         "typescript": "^4.6.2",
+        "uuid": "^8.3.2",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
