--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
         "axios": "^0.26.1",
         "dotenv-cli": "^5.1.0",
         "path": "^0.12.7",
+        "query-string": "^7.1.1",
         "react": "^17.0.2",
         "react-avatar-editor": "^12.0.0",
         "react-dom": "^17.0.2",
