--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
         "@types/react-dom": "^17.0.13",
         "@types/react-redux": "^7.1.23",
         "@types/react-router-dom": "^5.3.3",
+        "@types/socket.io-client": "^3.0.0",
         "@types/styled-components": "^5.1.24",
         "@types/uuid": "^8.3.4",
         "axios": "^0.26.1",
@@ -27,6 +28,7 @@
         "react-scripts": "5.0.0",
         "redux": "^4.1.2",
         "redux-saga": "^1.1.3",
+        "socket.io-client": "^4.5.1",
         "styled-components": "^5.3.3",
         "styled-reset": "^4.3.4",
         "typescript": "^4.6.2",
