--- a/websocket/package.json
+++ b/websocket/package.json
@@ -13,6 +13,7 @@
         "@babel/core": "^7.18.0",
         "@babel/node": "^7.17.10",
         "@babel/preset-env": "^7.18.0",
+        "@socket.io/mongo-adapter": "^0.2.1",
         "cors": "^2.8.5",
         "dotenv": "^16.0.1",
         "express": "^4.18.1",
