--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
         "@types/passport-jwt": "^3.0.6",
         "@types/passport-local": "^1.0.34",
         "bcrypt": "^5.0.1",
+        "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "cross-env": "^7.0.3",
         "dotenv": "^16.0.0",
