--- a/backend/package.json
+++ b/backend/package.json
@@ -36,6 +36,7 @@
         "passport-jwt": "^4.0.0",
         "passport-local": "^1.0.0",
         "path": "^0.12.7",
+        "redis": "^4.5.1",
         "reflect-metadata": "^0.1.13",
         "typeorm": "0.3.4"
     },
