--- a/backend/package.json
+++ b/backend/package.json
@@ -12,11 +12,13 @@
     "license": "ISC",
     "dependencies": {
         "@types/bcrypt": "^5.0.0",
+        "@types/cookie-parser": "^1.4.3",
         "@types/cors": "^2.8.12",
         "@types/dotenv": "^8.2.0",
         "@types/fs-extra": "^9.0.13",
         "@types/morgan": "^1.9.3",
         "@types/multer": "^1.4.7",
+        "@types/nodemailer": "^6.4.7",
         "@types/passport": "^1.0.7",
         "@types/passport-jwt": "^3.0.6",
         "@types/passport-local": "^1.0.34",
@@ -32,6 +34,7 @@
         "multer": "^1.4.4",
         "mysql": "^2.14.1",
         "mysql2": "^2.3.3",
+        "nodemailer": "^6.8.0",
         "passport": "^0.5.2",
         "passport-jwt": "^4.0.0",
         "passport-local": "^1.0.0",
