--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
         "react-router-dom": "^6.2.2",
         "react-scripts": "5.0.0",
         "redux": "^4.1.2",
+        "redux-devtools-extension": "^2.13.9",
         "redux-saga": "^1.1.3",
         "socket.io-client": "^4.5.1",
         "styled-components": "^5.3.3",
