--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
         "@types/passport": "^1.0.7",
         "@types/passport-jwt": "^3.0.6",
         "@types/passport-local": "^1.0.34",
+        "@types/uuid": "^9.0.0",
         "bcrypt": "^5.0.1",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
