--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -9,7 +9,8 @@
         "outDir": "dist" /*컴파일 된 js 파일 경로*/,
         "experimentalDecorators": true /*ES7의 decorators 지원 여부*/,
         "emitDecoratorMetadata": true /*decorator를 위한 타입 메타데이터를 내보내는 것에 대한 지원 여부*/,
-        "strictPropertyInitialization": false /*클래스 값 초기화 확인 여부*/
+        "strictPropertyInitialization": false /*클래스 값 초기화 확인 여부*/,
+        "typeRoots": ["./node_modules/@types", "./src/customTypes"]
     },
     "include": ["src/**/*"] /* 컴파일 할 ts 파일 경로 */,
     "exclude": ["node_modules"] /*컴파일 제외 파일*/
