--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
         "@types/passport-local": "^1.0.34",
         "@types/uuid": "^9.0.0",
         "bcrypt": "^5.0.1",
+        "class-validator": "^0.14.0",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "cross-env": "^7.0.3",
