--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
         "@types/react-dom": "^17.0.13",
         "@types/react-redux": "^7.1.23",
         "@types/react-router-dom": "^5.3.3",
+        "@types/react-slick": "^0.23.10",
         "@types/socket.io-client": "^3.0.0",
         "@types/styled-components": "^5.1.24",
         "@types/uuid": "^8.3.4",
@@ -26,9 +27,11 @@
         "react-redux": "^7.2.8",
         "react-router-dom": "^6.2.2",
         "react-scripts": "5.0.0",
+        "react-slick": "^0.29.0",
         "redux": "^4.1.2",
         "redux-devtools-extension": "^2.13.9",
         "redux-saga": "^1.1.3",
+        "slick-carousel": "^1.8.1",
         "socket.io-client": "^4.5.1",
         "styled-components": "^5.3.3",
         "styled-reset": "^4.3.4",
